--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.6.7",
     "element-plus": "^2.4.3",
     "pinia": "^2.1.7",
     "vue": "^3.3.8",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.0",
+    "sass": "^1.70.0",
     "scss": "^0.2.4",
     "typescript": "^5.2.2",
     "unplugin-auto-import": "^0.17.2",
