--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.0",
+    "mockjs": "^1.1.0",
     "sass": "^1.70.0",
     "scss": "^0.2.4",
     "typescript": "^5.2.2",
     "unplugin-auto-import": "^0.17.2",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.0",
+    "vite-plugin-mock": "^2.9.6",
     "vue-tsc": "^1.8.22"
   }
 }
